src/catalogue/styles/Download.css
.download {
    width: 100%;
    height: 100%;
    padding: 2rem;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.download h3 {
    font-size: 3.5rem;
    line-height: 2;
}

.download-text {
    width: 80%;
    font-size: 2rem;
    line-height: 1.5;
    text-align: center;
    color: #535353;
}

.download-progress {
    font-size: 1.6rem;
    margin: 4rem 0;
    text-align: center;
    width: 25%;
    height: 25%;
}

.download-progress-circle {
    margin-bottom: 1rem;
}

